# HoloFrame

./: .gitignore  README.md  effects.py  face_tracker.py  filters.py  gesture_detector.py  hand_tracker.py  image_renderer.py  main.py  pyproject.toml  requirements.txt  ui_panel.py
