[project]
name = "holoframe"
version = "1.0.0"
description = "Real-time hand-tracked holographic image display"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "pyvirtualcam>=0.15.0",
    "mss>=10.2.0",
]

[project.scripts]
holoframe = "main:main"
